Fix scrollbars visibility

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -73,9 +73,14 @@
 }
 
 .rbc-row-content-collapse {
+  overflow-y: scroll;
+
   &.collapsed {
     max-height: 23px * 5.5; // 5.5 rows
-    overflow: auto;
+  }
+
+  > .rbc-allday-cell {
+    overflow-y: unset !important;
   }
 }
 
