--- a/src/less/time-grid.less
+++ b/src/less/time-grid.less
@@ -32,6 +32,7 @@
     box-sizing: content-box;
     width: 100%;
     position: relative;
+    overflow-y: scroll;
   }
 
   .rbc-allday-events {
